--- a/package.json
+++ b/package.json
@@ -81,10 +81,11 @@
 		"jquery": "^3.6.0",
 		"popper.js": "^1.16.1",
 		"prop-types": "^15.6.1",
-		"react": "^16.8.4",
+		"react": "^16.14.0",
 		"react-bootstrap": "^1.5.2",
-		"react-dom": "^16.8.4",
+		"react-dom": "^16.14.0",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"reactstrap": "^8.9.0"
 	}
 }
